# research-skills-template

./: CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/commands/: brainstorm.md  evaluate-idea.md  literature-review.md  novelty-check.md  research-topic.md
.claude/skills/gdoc/: SKILL.md
.claude/skills/inspect-read-logs/: SKILL.md
.claude/skills/runpodctl/: SKILL.md
tools/: citation.py  paper_fetcher.py  utils.py
