[project]
name = "research-tools"
version = "0.1.0"
description = "Search and paper-fetching tools for AI safety research skills"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "trafilatura>=1.12",
    "arxiv>=2.1",
    "pypdf>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tools"]
